--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
 }
 
 .game-board {
+  position: relative;
   background-image: linear-gradient(rgba(0, 0, 0, 0.1),rgba(0, 0, 0, 0.1)) ,url(../img/snakeBoard.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -40,7 +41,7 @@ body {
   /* animation: warn 1s linear infinite; */
 }
 
-.game-board div {
+.game-board .single_grid {
   width: 10px;
   height: 10px;
   box-sizing: border-box;
@@ -50,6 +51,33 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* border: 1px solid #c00505; */
+}
+
+.game_over_board{
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.616);
+  z-index: 100;
+  transition: 0.3s ease-out;
+}
+.game_over_board h2{
+  color: rgb(254, 48, 48);
+  transition: 0.3s ease-out;
+  transform: scale(0);
+}
+.game_over_board #replay_btn{
+  padding: 4px 10px;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+  border-radius: 3px;
+  
 }
 
 .snake,
